# MarkdownEditor

./: CMakeLists.txt  resources.qrc
.github/workflows/: build_android.yml
android/: AndroidManifest.xml
src/: FormatToolBar.cpp  FormatToolBar.h  MainWindow.cpp  MainWindow.h  MarkdownEditor.cpp  MarkdownEditor.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  PreviewWidget.cpp  PreviewWidget.h  main.cpp
src/parser/: CodeHighlight.cpp  CodeHighlight.h  Core.cpp  Core.h  FoldBlock.cpp  FoldBlock.h  HtmlGen.cpp  HtmlGen.h  InlineProc.cpp  InlineProc.h  MarkdownParser.cpp  MarkdownParser.h  Table.cpp  Table.h  Utils.cpp  Utils.h
